Timeformat: Prevent line break in relative time segment (#1110)

--- a/src/scripts/timeformat.css
+++ b/src/scripts/timeformat.css
@@ -2,11 +2,18 @@
   font-size: 0px;
 }
 
-[data-formatted-time]::after {
+[data-formatted-time]::before {
   content: attr(data-formatted-time);
   font-size: .78125rem;
 }
 
+[data-formatted-relative-time]::after {
+  content: attr(data-formatted-relative-time);
+  font-size: .78125rem;
+  display: inline-block;
+}
+
+[data-formatted-time][title]::before,
 [data-formatted-time][title]::after {
   cursor: help;
 }
